k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: comfyui
  labels:
    name: comfyui
    gpu.nvidia.com/accelerator: h100
